# tennul-backend

./: .gitignore  Cargo.toml  deploy.sh  init.sh  install-deps.sh  install_remote.sh  tennul-backend.service
src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  wireguard.rs
