[package]
name = "tennul-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
x25519-dalek = { version = "2", features = ["getrandom"] }
rand = "0.8"
ipnetwork = "0.20"
wireguard-control = "1.6"
reqwest = "0.11"
toml = "0.8"
