[package]
name = "tennul-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
base64 = "0.13"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = "0.6"
reqwest = { version = "0.11", features = ["json", "default-tls"] }
log = "0.4"
env_logger = "0.10"
rustls = "0.20"
rustls-pemfile = "1.0"
